--- a/gzip/gzip.bugzoo.yml
+++ b/gzip/gzip.bugzoo.yml
@@ -4,37 +4,37 @@ blueprints:
   - arguments:
       perl: 5.10.1
       scenario: gzip-bug-2009-09-26-a1d3d4019d-f17cbd13a1
-    depends-on: squareslab/manybugs:gzip
+    depends-on: semu/manybugs:gzip
     file: Dockerfile.bug
-    tag: squareslab/manybugs:gzip-2009-09-26-a1d3d4019d-f17cbd13a1
+    tag: semu/manybugs:gzip-2009-09-26-a1d3d4019d-f17cbd13a1
     type: docker
   - arguments:
       perl: 5.20.0
       scenario: gzip-bug-2009-10-09-1a085b1446-118a107f2d
-    depends-on: squareslab/manybugs:gzip
+    depends-on: semu/manybugs:gzip
     file: Dockerfile.bug
-    tag: squareslab/manybugs:gzip-2009-10-09-1a085b1446-118a107f2d
+    tag: semu/manybugs:gzip-2009-10-09-1a085b1446-118a107f2d
     type: docker
   - arguments:
       perl: 5.20.0
       scenario: gzip-bug-2009-08-16-3fe0caeada-39a362ae9d
-    depends-on: squareslab/manybugs:gzip
+    depends-on: semu/manybugs:gzip
     file: Dockerfile.bug
-    tag: squareslab/manybugs:gzip-2009-08-16-3fe0caeada-39a362ae9d
+    tag: semu/manybugs:gzip-2009-08-16-3fe0caeada-39a362ae9d
     type: docker
   - arguments:
       perl: 5.20.0
       scenario: gzip-bug-2010-02-19-3eb6091d69-884ef6d16c
-    depends-on: squareslab/manybugs:gzip
+    depends-on: semu/manybugs:gzip
     file: Dockerfile.bug
-    tag: squareslab/manybugs:gzip-2010-02-19-3eb6091d69-884ef6d16c
+    tag: semu/manybugs:gzip-2010-02-19-3eb6091d69-884ef6d16c
     type: docker
   - arguments:
       perl: 5.20.0
       scenario: gzip-bug-2010-01-30-fc00329e3d-1204630c96
-    depends-on: squareslab/manybugs:gzip
+    depends-on: semu/manybugs:gzip
     file: Dockerfile.bug
-    tag: squareslab/manybugs:gzip-2010-01-30-fc00329e3d-1204630c96
+    tag: semu/manybugs:gzip-2010-01-30-fc00329e3d-1204630c96
     type: docker
 
 bugs:
@@ -42,7 +42,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:gzip-2009-09-26-a1d3d4019d-f17cbd13a1
+    image: semu/manybugs:gzip-2009-09-26-a1d3d4019d-f17cbd13a1
     languages:
     - c
     name: manybugs:gzip:2009-09-26-a1d3d4019d-f17cbd13a1
@@ -57,7 +57,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:gzip-2009-10-09-1a085b1446-118a107f2d
+    image: semu/manybugs:gzip-2009-10-09-1a085b1446-118a107f2d
     languages:
     - c
     name: manybugs:gzip:2009-10-09-1a085b1446-118a107f2d
@@ -72,7 +72,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:gzip-2009-08-16-3fe0caeada-39a362ae9d
+    image: semu/manybugs:gzip-2009-08-16-3fe0caeada-39a362ae9d
     languages:
     - c
     name: manybugs:gzip:2009-08-16-3fe0caeada-39a362ae9d
@@ -87,7 +87,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:gzip-2010-02-19-3eb6091d69-884ef6d16c
+    image: semu/manybugs:gzip-2010-02-19-3eb6091d69-884ef6d16c
     languages:
     - c
     name: manybugs:gzip:2010-02-19-3eb6091d69-884ef6d16c
@@ -102,7 +102,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:gzip-2010-01-30-fc00329e3d-1204630c96
+    image: semu/manybugs:gzip-2010-01-30-fc00329e3d-1204630c96
     languages:
     - c
     name: manybugs:gzip:2010-01-30-fc00329e3d-1204630c96
