--- a/manybugs.bugzoo.yml
+++ b/manybugs.bugzoo.yml
@@ -2,10 +2,10 @@ version: "1.0"
 
 blueprints:
   - type: docker
-    tag: squareslab/manybugs:base
+    tag: semu/manybugs:base
     file: Dockerfile
     context: .
   - type: docker
-    tag: squareslab/manybugs:gzip
+    tag: semu/manybugs:gzip
     file: Dockerfile.gzip
-    depends-on: squareslab/manybugs:base
+    depends-on: semu/manybugs:base
