--- a/python/python.bugzoo.yml
+++ b/python/python.bugzoo.yml
@@ -2,99 +2,99 @@ version: "1.0"
 
 blueprints:
   - type: docker
-    tag: squareslab/manybugs:python
+    tag: semu/manybugs:python
     file: Dockerfile
     context: .
-    depends-on: squareslab/manybugs:base
+    depends-on: semu/manybugs:base
   - arguments:
       scenario: python-bug-69223-69224
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69223-69224
+    tag: semu/manybugs:python-69223-69224
     type: docker
   - arguments:
       scenario: python-bug-70098-70101
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-70098-70101
+    tag: semu/manybugs:python-70098-70101
     type: docker
   - arguments:
       scenario: python-bug-69831-69833
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69831-69833
+    tag: semu/manybugs:python-69831-69833
     type: docker
   - arguments:
       scenario: python-bug-70019-70023
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-70019-70023
+    tag: semu/manybugs:python-70019-70023
     type: docker
   - arguments:
       scenario: python-bug-70056-70059
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-70056-70059
+    tag: semu/manybugs:python-70056-70059
     type: docker
   - arguments:
       scenario: python-bug-69945-69946
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69945-69946
+    tag: semu/manybugs:python-69945-69946
     type: docker
   - arguments:
       scenario: python-bug-69783-69784
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69783-69784
+    tag: semu/manybugs:python-69783-69784
     type: docker
   - arguments:
       scenario: python-bug-69785-69789
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69785-69789
+    tag: semu/manybugs:python-69785-69789
     type: docker
   - arguments:
       scenario: python-bug-69368-69372
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69368-69372
+    tag: semu/manybugs:python-69368-69372
     type: docker
   - arguments:
       scenario: python-bug-69709-69710
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69709-69710
+    tag: semu/manybugs:python-69709-69710
     type: docker
   - arguments:
       scenario: python-bug-70120-70124
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-70120-70124
+    tag: semu/manybugs:python-70120-70124
     type: docker
   - arguments:
       scenario: python-bug-69470-69474
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69470-69474
+    tag: semu/manybugs:python-69470-69474
     type: docker
   - arguments:
       scenario: python-bug-69934-69935
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69934-69935
+    tag: semu/manybugs:python-69934-69935
     type: docker
   - arguments:
       scenario: python-bug-69740-69743
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69740-69743
+    tag: semu/manybugs:python-69740-69743
     type: docker
   - arguments:
       scenario: python-bug-69609-69616
-    depends-on: squareslab/manybugs:python
+    depends-on: semu/manybugs:python
     file: Dockerfile.bug
-    tag: squareslab/manybugs:python-69609-69616
+    tag: semu/manybugs:python-69609-69616
     type: docker
 
 bugs:
@@ -102,7 +102,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69223-69224
+    image: semu/manybugs:python-69223-69224
     languages:
     - c
     name: manybugs:python:69223-69224
@@ -117,7 +117,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-70098-70101
+    image: semu/manybugs:python-70098-70101
     languages:
     - c
     name: manybugs:python:70098-70101
@@ -132,7 +132,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69831-69833
+    image: semu/manybugs:python-69831-69833
     languages:
     - c
     name: manybugs:python:69831-69833
@@ -147,7 +147,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-70019-70023
+    image: semu/manybugs:python-70019-70023
     languages:
     - c
     name: manybugs:python:70019-70023
@@ -162,7 +162,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-70056-70059
+    image: semu/manybugs:python-70056-70059
     languages:
     - c
     name: manybugs:python:70056-70059
@@ -177,7 +177,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69945-69946
+    image: semu/manybugs:python-69945-69946
     languages:
     - c
     name: manybugs:python:69945-69946
@@ -192,7 +192,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69783-69784
+    image: semu/manybugs:python-69783-69784
     languages:
     - c
     name: manybugs:python:69783-69784
@@ -207,7 +207,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69785-69789
+    image: semu/manybugs:python-69785-69789
     languages:
     - c
     name: manybugs:python:69785-69789
@@ -222,7 +222,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69368-69372
+    image: semu/manybugs:python-69368-69372
     languages:
     - c
     name: manybugs:python:69368-69372
@@ -237,7 +237,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69709-69710
+    image: semu/manybugs:python-69709-69710
     languages:
     - c
     name: manybugs:python:69709-69710
@@ -252,7 +252,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-70120-70124
+    image: semu/manybugs:python-70120-70124
     languages:
     - c
     name: manybugs:python:70120-70124
@@ -267,7 +267,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69470-69474
+    image: semu/manybugs:python-69470-69474
     languages:
     - c
     name: manybugs:python:69470-69474
@@ -282,7 +282,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69934-69935
+    image: semu/manybugs:python-69934-69935
     languages:
     - c
     name: manybugs:python:69934-69935
@@ -297,7 +297,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69740-69743
+    image: semu/manybugs:python-69740-69743
     languages:
     - c
     name: manybugs:python:69740-69743
@@ -312,7 +312,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:python-69609-69616
+    image: semu/manybugs:python-69609-69616
     languages:
     - c
     name: manybugs:python:69609-69616
