--- a/wireshark/wireshark.bugzoo.yml
+++ b/wireshark/wireshark.bugzoo.yml
@@ -2,57 +2,57 @@ version: "1.0"
 
 blueprints:
   - type: docker
-    tag: squareslab/manybugs:wireshark
+    tag: semu/manybugs:wireshark
     file: Dockerfile
     context: .
-    depends-on: squareslab/manybugs:base
+    depends-on: semu/manybugs:base
   - arguments:
       scenario: wireshark-bug-37122-37123
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37122-37123
+    tag: semu/manybugs:wireshark-37122-37123
     type: docker
   - arguments:
       scenario: wireshark-bug-37190-37191
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37190-37191
+    tag: semu/manybugs:wireshark-37190-37191
     type: docker
   - arguments:
       scenario: wireshark-bug-35419-35414
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-35419-35414
+    tag: semu/manybugs:wireshark-35419-35414
     type: docker
   - arguments:
       scenario: wireshark-bug-37172-37173
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37172-37173
+    tag: semu/manybugs:wireshark-37172-37173
     type: docker
   - arguments:
       scenario: wireshark-bug-37171-37170
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37171-37170
+    tag: semu/manybugs:wireshark-37171-37170
     type: docker
   - arguments:
       scenario: wireshark-bug-37112-37111
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37112-37111
+    tag: semu/manybugs:wireshark-37112-37111
     type: docker
   - arguments:
       scenario: wireshark-bug-37172-37171
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-37172-37171
+    tag: semu/manybugs:wireshark-37172-37171
     type: docker
   - arguments:
       scenario: wireshark-bug-35419-35414
-    depends-on: squareslab/manybugs:wireshark
+    depends-on: semu/manybugs:wireshark
     file: Dockerfile.bug
-    tag: squareslab/manybugs:wireshark-35419-35414
+    tag: semu/manybugs:wireshark-35419-35414
     type: docker
 
 bugs:
@@ -60,7 +60,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37122-37123
+    image: semu/manybugs:wireshark-37122-37123
     languages:
     - c
     name: manybugs:wireshark:37122-37123
@@ -75,7 +75,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37190-37191
+    image: semu/manybugs:wireshark-37190-37191
     languages:
     - c
     name: manybugs:wireshark:37190-37191
@@ -90,7 +90,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-35419-35414
+    image: semu/manybugs:wireshark-35419-35414
     languages:
     - c
     name: manybugs:wireshark:35419-35414
@@ -105,7 +105,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37172-37173
+    image: semu/manybugs:wireshark-37172-37173
     languages:
     - c
     name: manybugs:wireshark:37172-37173
@@ -120,7 +120,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37171-37170
+    image: semu/manybugs:wireshark-37171-37170
     languages:
     - c
     name: manybugs:wireshark:37171-37170
@@ -135,7 +135,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37112-37111
+    image: semu/manybugs:wireshark-37112-37111
     languages:
     - c
     name: manybugs:wireshark:37112-37111
@@ -150,7 +150,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-37172-37171
+    image: semu/manybugs:wireshark-37172-37171
     languages:
     - c
     name: manybugs:wireshark:37172-37171
@@ -165,7 +165,7 @@ bugs:
       time-limit: 300
       type: configure-and-make
     dataset: manybugs
-    image: squareslab/manybugs:wireshark-35419-35414
+    image: semu/manybugs:wireshark-35419-35414
     languages:
     - c
     name: manybugs:wireshark:35419-35414
